# dart_vlc

./: pubspec.yaml
dartvlc/: CMakeLists.txt  main.cc  player.cc  player.h  player_registry.h
dartvlc/api/: api.cc  api.h  eventmanager.h  video_frame_adapter.cc  video_frame_adapter.h
dartvlc/internal/: events.h  player_impl.cc  player_impl.h  playlist_impl.cc  playlist_impl.h  video_output.cc  video_output.h
dartvlc/mediasource/: playlist.h
example/lib/: main.dart
ffi/: example.dart
ffi/lib/: dart_vlc_ffi.dart
ffi/lib/src/: player.dart
ffi/lib/src/enums/: playbackState.dart
ffi/lib/src/internal/: ffi.dart  initializer.dart
ffi/lib/src/internal/typedefs/: player.dart
ffi/lib/src/playerState/: playerState.dart
lib/: dart_vlc.dart
lib/src/widgets/: controls.dart  video.dart
windows/: CMakeLists.txt  dart_vlc_plugin.cc  video_outlet.cc  video_outlet.h
